# 2024_Lab_8_Alex_Kirra_G8

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  can_receive.c  can_send.c
